deployment/pr-dev-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    cattle.io/creator: norman
    app: covid-sc-BRANCH
    workload.user.cattle.io/workloadselector: deployment-covid-covid-sc-BRANCH
  name: covid-sc-BRANCH
  namespace: covid
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: deployment-covid-covid-sc-BRANCH
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        buildnum: BUILD_NUM
      labels:
        workload.user.cattle.io/workloadselector: deployment-covid-covid-sc-BRANCH
    spec:
      containers:
      - env:
        - name: PORT
          value: "8000"
        image: 127.0.0.1:34422/covidsc-web:BRANCH
        imagePullPolicy: Always
        name: covid-sc-BRANCH
        ports:
        - containerPort: 8000
          name: default
          protocol: TCP
        resources: {}
        securityContext:
          capabilities: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: pipeline-docker-registry
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: covid-sc-BRANCH
  annotations:
    field.cattle.io/targetWorkloadIds: '["deployment:covid:covid-sc-BRANCH"]'
  name: covid-sc-BRANCH-service
  namespace: covid
spec:
  type: ClusterIP
  ports:
  - name: default
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    workloadID_covid-sc-BRANCH-service: "true"
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: covid-sc-BRANCH
  name: ingress-covid-sc-BRANCH-dev-krum-io
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    field.cattle.io/targetWorkloadIds: '["deployment:covid:covid-sc-BRANCH"]'
  namespace: covid
spec:
  rules:
  - host: BRANCH.covid-sc-dev.krum.io
    http:
      paths:
      - backend:
          serviceName: covid-sc-BRANCH-service
          servicePort: 8000
        path: /
  tls:
  - hosts:
    - covid-sc.dev.krum.io
    secretName: crt-covid-sc-dev-krum-io
